--- a/Librairie/assets/styles/css/style.css
+++ b/Librairie/assets/styles/css/style.css
@@ -8,12 +8,12 @@
 /***** MONOSPACE *****/
 /*** font-family: 'Roboto Mono', monospace; ***/
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
-button.btn {
+.btn {
   box-sizing: border-box;
-  background-color: #1499e7;
+  background-color: transparent;
   border-radius: 0.5em;
   border: none;
-  color: black;
+  color: #fff;
   cursor: pointer;
   font-size: 1rem;
   font-weight: 400;
@@ -30,22 +30,7 @@ button.btn {
 }
 
 .btn:hover {
-  box-shadow: 1px 1px 5px 5px rgba(255, 255, 255, 0.4);
-}
-
-.btn:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(130deg, transparent, transparent, #fff, transparent, transparent);
-  transition: all 1s;
-}
-
-.btn:hover:before {
-  left: 100%;
+  box-shadow: 1px 1px 5px 5px rgba(20, 86, 157, 0.4);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -305,12 +290,37 @@ table {
   border-spacing: 0;
 }
 
-body {
-  font-family: "Roboto", sans-serif;
-  background: black;
+.header {
+  width: 100vw;
+  background: rgba(0, 0, 0, 0.4);
+  margin-bottom: 2vh;
 }
-body div {
-  margin: 30px;
+.header nav {
+  grid-row: 2/3;
+}
+.header nav ul {
+  display: grid;
+  grid-template-columns: 0.3fr repeat(4, 1fr);
+  padding: 10px;
+  align-self: center;
+}
+.header nav ul li {
+  display: inline-block;
+  color: #fff;
+}
+
+.r-2col {
+  display: grid;
+  grid-template-rows: 0.5fr 1fr;
+}
+.r-2col h2 {
+  grid-row: 1/2;
+  text-align: center;
+}
+.r-2col > section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row: 2/3;
 }
 
 /*# sourceMappingURL=style.css.map */
