--- a/Librairie/assets/styles/sass/_buttons.scss
+++ b/Librairie/assets/styles/sass/_buttons.scss
@@ -1,11 +1,11 @@
 @import "vars";
 
-button.btn {
+.btn {
         box-sizing: border-box;
-        background-color: $darkThemeBlue;
+        background-color: transparent;
         border-radius: 0.5em;
         border:none;
-        color: black;
+        color: #fff;
         cursor: pointer;
         font-size: 1rem;
         font-weight: 400;
@@ -22,23 +22,10 @@ button.btn {
 }
 
 .btn:hover {
-    box-shadow: 1px 1px 5px 5px rgba(255, 255, 255, 0.4);
+    box-shadow: 1px 1px 5px 5px rgba(20, 86, 157, 0.4);
 }
 
-.btn:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(130deg,transparent,transparent, #fff,transparent,transparent,);
-    transition: all 1s;
-}
 
-.btn:hover:before {
-    left: 100%;
-}
 
 
 
