--- a/Librairie/assets/styles/sass/style.scss
+++ b/Librairie/assets/styles/sass/style.scss
@@ -1,11 +1,8 @@
 @import "buttons";
 @import "reset";
+@import "header";
+@import "section";
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background:black;
     
-    div{
-        margin:30px;
-    }
 }
